Fixed menu on mobile.

--- a/examples/yoga/css/media.css
+++ b/examples/yoga/css/media.css
@@ -253,9 +253,8 @@
 
 @media (max-width: 760px) {
   .header_menu {
-    margin: 2rem 0;
     width: 100%;
-    display: none; }
+    display: block; }
   .menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -272,11 +271,10 @@
     flex-flow: column wrap; }
   .menu_item {
     margin: 1rem 0;
-    margin-left: -4000px;
-    -webkit-transition: all .2s ease;
-    transition: all .2s ease; }
+    position: relative;
+    left: -4000px; }
     .menu_item .green-on-white {
-      font-size: 2rem; }
+      font-size: 1.7rem; }
   .top_bar {
     height: 90px;
     -webkit-box-pack: justify;
@@ -301,12 +299,12 @@
     align-self: flex-start; }
   .toggle-btn {
     display: block;
-    height: 63px;
     border: none;
     background-color: transparent;
-    width: 60px;
+    width: 33px;
     color: #fff;
-    font-size: 2rem; } }
+    font-size: 1.5rem;
+    margin: -2px; } }
 
 @media (max-width: 600px) {
   .description {
@@ -379,7 +377,11 @@
     font-size: .9rem;
     line-height: 1rem; }
   .order-now {
-    padding: 0; } }
+    padding: 0; }
+  .logo img {
+    width: 2rem; }
+  .top_bar {
+    height: 55px; } }
 
 @media (max-width: 380px) {
   .section_title {
