--- a/examples/yoga/css/style.css
+++ b/examples/yoga/css/style.css
@@ -13,14 +13,6 @@ header {
   height: 100vh;
   width: 100%; }
 
-.derp {
-  position: fixed;
-  bottom: 0;
-  height: 50px;
-  width: 100%;
-  background-color: white;
-  z-index: 99999; }
-
 .margin-top-2 {
   margin-top: 2rem; }
 
@@ -82,7 +74,8 @@ a {
   border-radius: 0 0 10px 10px;
   background-color: #66a900;
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3); }
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  overflow: hidden; }
 
 .baner_img {
   width: 100%;
@@ -118,6 +111,10 @@ a {
   display: flex; }
   .header_menu ul li {
     font-size: 1.1rem; }
+
+.menu_item {
+  -webkit-transition: all .2s ease;
+  transition: all .2s ease; }
 
 .wave_top {
   background-image: url("../img/wave-top.png");
